tests/dbg_cases/imports/errors/dbg_import_error_circular/circular_b.csm
// File B - imports from A (creating circle)
#import func_a from "./circular_a.csm";

i32 func_b() {
    return 2;
}
